--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,10 +18,15 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^2.0.1
+  flutter_lints: ^2.0.3
 
 flutter:
-  assets:
-  - assets/games.json
+  uses-material-design: true
 
-uses-material-design: true
+  assets:
+    - assets/games.json
+
+  fonts:
+    - family: RobotoMono
+      fonts:
+        - asset: assets/fonts/RobotoMono-VariableFont_wght.ttf
